package com.eduschedule.entity;
import jakarta.persistence.*;
import lombok.*;

@Entity
@Getter
@Setter
@Table(
    name = "classes",
    uniqueConstraints = {
        @UniqueConstraint(columnNames = {"name", "school_year_id"})
    }
)
@Data
@Builder
@NoArgsConstructor
@AllArgsConstructor
public class SchoolClass {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @Column(nullable = false, length = 10)
    private String name;

    @Column(nullable = false)
    private Integer grade;

    @ManyToOne
    @JoinColumn(name = "homeroom_teacher_id")
    private Teacher homeroomTeacher;

    @ManyToOne
    @JoinColumn(name = "school_year_id")
    private SchoolYear schoolYear;
}
