-- Epic 1 — DB Migration
-- Task 1.1: Refactor timetables | Task 1.2: Add weeks | Task 1.3: Refactor slots

-- ── Task 1.1 — Refactor timetables ──────────────────────────────────────────

ALTER TABLE public.timetables DROP COLUMN IF EXISTS name;
ALTER TABLE public.timetables DROP COLUMN IF EXISTS status;
ALTER TABLE public.timetables DROP COLUMN IF EXISTS off_day;
ALTER TABLE public.timetables DROP COLUMN IF EXISTS off_session;
ALTER TABLE public.timetables DROP COLUMN IF EXISTS published_at;
ALTER TABLE public.timetables DROP COLUMN IF EXISTS created_at;

ALTER TABLE ONLY public.timetables
    ADD CONSTRAINT timetables_school_year_semester_uq UNIQUE (school_year_id, semester_order);

-- ── Task 1.2 — Thêm bảng weeks ──────────────────────────────────────────────

CREATE TABLE public.weeks (
    id bigint NOT NULL,
    timetable_id bigint NOT NULL,
    week_number integer NOT NULL,
    start_date date
);

ALTER TABLE public.weeks ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.weeks_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

ALTER TABLE ONLY public.weeks ADD CONSTRAINT weeks_pkey PRIMARY KEY (id);
ALTER TABLE ONLY public.weeks ADD CONSTRAINT weeks_timetable_week_uq UNIQUE (timetable_id, week_number);
ALTER TABLE ONLY public.weeks ADD CONSTRAINT weeks_timetable_id_fkey FOREIGN KEY (timetable_id) REFERENCES public.timetables(id);

-- ── Task 1.3 — Refactor slots ────────────────────────────────────────────────

-- Drop old unique constraint and FK to timetables
ALTER TABLE ONLY public.slots DROP CONSTRAINT IF EXISTS slots_timetable_day_period_uq;
ALTER TABLE ONLY public.slots DROP CONSTRAINT IF EXISTS slots_timetable_id_fkey;

-- Swap timetable_id → week_id, add session and special_room_id
ALTER TABLE public.slots DROP COLUMN timetable_id;
ALTER TABLE public.slots ADD COLUMN week_id bigint NOT NULL;
ALTER TABLE public.slots ADD COLUMN session integer NOT NULL;
ALTER TABLE public.slots ADD COLUMN special_room_id bigint;

-- New FK and unique constraints
ALTER TABLE ONLY public.slots ADD CONSTRAINT slots_week_id_fkey FOREIGN KEY (week_id) REFERENCES public.weeks(id);
ALTER TABLE ONLY public.slots ADD CONSTRAINT slots_special_room_id_fkey FOREIGN KEY (special_room_id) REFERENCES public.special_rooms(id);
ALTER TABLE ONLY public.slots ADD CONSTRAINT slots_week_assignment_day_session_period_uq
    UNIQUE (week_id, assignment_id, day, session, period);
