@startuml EduSchedule_ClassDiagram
top to bottom direction

skinparam dpi 180
skinparam defaultFontSize 26
skinparam classFontSize 30
skinparam classAttributeFontSize 26
skinparam arrowFontSize 23
skinparam nodesep 135
skinparam ranksep 95
skinparam linetype ortho

class User {
  -Long id
  -String username
  -String password
  --
  +register(request: RegisterRequest):\nRegisterResponse
  +login(request: LoginRequest):\nLoginResponse
  +logout(): void
}

class RefreshToken {
  -Long id
  -String token
  -Instant expiresAt
  -Instant createdAt
  --
  +refresh(refreshToken: String):\nTokenResponse
}

class Teacher {
  -Long id
  -String fullName
  -TeacherType type
  -Integer maxPeriodsPerWeek
  -LocalDateTime createdAt
  --
  +getAll(): List<TeacherResponse>
  +getById(id: Long): TeacherResponse
  +create(request: TeacherRequest):\nTeacherResponse
  +update(id: Long, request: TeacherRequest):\nTeacherResponse
  +deleteBatch(ids: List<Long>):\nBatchDeleteCascadeResponse
}

class Subject {
  -Long id
  -String name
  -Integer periodsGrade1
  -Integer periodsGrade2
  -Integer periodsGrade3
  -Integer periodsGrade4
  -Integer periodsGrade5
  --
  +getAll(): List<SubjectResponse>
  +getById(id: Long): SubjectResponse
  +create(request: SubjectRequest):\nSubjectResponse
  +update(id: Long, request: SubjectRequest):\nSubjectResponse
  +delete(id: Long): void
  +deleteBatch(ids: List<Long>): void
}

class SpecialRoom {
  -Long id
  -String name
  -Integer quantity
  --
  +getAll(): List<SpecialRoomResponse>
  +create(request: SpecialRoomRequest):\nSpecialRoomResponse
  +update(id: Long, request: SpecialRoomRequest):\nSpecialRoomResponse
  +delete(id: Long): void
}

class SchoolYear {
  -Long id
  -Integer startYear
  --
  +getAll(username: String):\nList<SchoolYearResponse>
  +create(request: SchoolYearRequest,\nusername: String): SchoolYearResponse
  +delete(id: Long, username: String): void
}

class SchoolClass {
  -Long id
  -String name
  -Integer grade
  --
  +getAll(year: String): List<ClassResponse>
  +getById(id: Long): ClassResponse
  +create(request: ClassRequest): ClassResponse
  +update(id: Long, request: ClassRequest):\nClassResponse
  +delete(id: Long): void
  +deleteBatch(ids: List<Long>): void
}

class Assignment {
  -Long id
  -Integer periodsPerWeek
  --
  +getAll(year: String):\nList<AssignmentResponse>
  +getByClass(classId: Long):\nList<AssignmentResponse>
  +getByTeacher(teacherId: Long):\nList<AssignmentResponse>
  +assignHomeroom(\nrequest: HomeroomAssignmentRequest): void
  +assign(request: AssignmentRequest):\nAssignmentResponse
  +delete(id: Long): void
}

class Timetable {
  -Long id
  -Integer semesterOrder
  -Boolean isPublic
  -String publicToken
  --
  +getAll(): List<TimetableResponse>
  +getBySchoolYear(schoolYearId: Long):\nList<TimetableResponse>
  +getById(id: Long): TimetableResponse
  +create(request: TimetableRequest):\nTimetableResponse
  +publish(id: Long, weekIds: List<Long>):\nTimetableResponse
  +unpublishWeek(id: Long, weekId: Long): void
  +getPublishStatus(id: Long):\nList<WeekPublishStatusResponse>
}

class Week {
  -Long id
  -Integer weekNumber
  -LocalDate startDate
  -Boolean isPublished
  --
  +getByTimetable(timetableId: Long):\nList<WeekResponse>
  +updateStartDate(weekId: Long,\nnewStartDate: LocalDate): List<WeekResponse>
  +applyFromWeek(sourceWeekId: Long): void
  +getPublishEligibility(weekId: Long):\nWeekEligibility
}

class Slot {
  -Long id
  -Integer day
  -Integer session
  -Integer period
  -Long teacherIdSnapshot
  -String teacherNameSnapshot
  -String subjectNameSnapshot
  --
  +getAll(): List<SlotResponse>
  +getByWeek(weekId: Long): List<SlotResponse>
  +saveOrUpdateSlot(request: SlotRequest):\nSlotResponse
  +deleteByTeacherFromWeek(teacherId: Long,\ntimetableId: Long, fromWeekNumber: Integer): void
  +deleteSlot(id: Long): void
}

' ── Quan hệ ──────────────────────────────────────────────

User "1" -- "0..*" RefreshToken
User "1" -- "0..*" Teacher
User "1" -- "0..*" Subject
User "1" -- "0..*" SpecialRoom
User "1" -- "0..*" SchoolYear

Teacher "0..*" -- "0..*" Subject

SpecialRoom "0..1" --> "0..1" Subject

SchoolYear "1" -- "0..*" SchoolClass
SchoolClass "0..1" --> "0..1" Teacher

SchoolClass "1" -- "0..*" Assignment
Subject "1" -- "0..*" Assignment
Teacher "1" -- "0..*" Assignment

SchoolYear "1" -- "2" Timetable

Timetable "1" *-- "0..*" Week
Week "1" *-- "0..*" Slot

Slot "0..*" --> "0..1" Assignment
Slot "0..*" --> "0..1" SpecialRoom

' Bố trí biểu đồ thành các tầng dọc để phù hợp với trang tài liệu.
User -[hidden]right-> RefreshToken
User -[hidden]down-> Teacher
Teacher -[hidden]right-> Subject
Teacher -[hidden]down-> SpecialRoom
SpecialRoom -[hidden]right-> SchoolYear
SpecialRoom -[hidden]down-> SchoolClass
SchoolClass -[hidden]right-> Assignment
SchoolClass -[hidden]down-> Timetable
Timetable -[hidden]right-> Week
Timetable -[hidden]down-> Slot

@enduml
